16_subseq/grade.txt
Grading at Thu Jan 14 09:25:32 UTC 2021
Attempting to compile maxSeq.c 
maxSeq.c:28:3: error: expected identifier or ‘(’ before ‘}’ token
   }
   ^
The code did not compile!

Overall Grade: F
